v5.3.1

  * added optional #:lang keyword to term

v5.3

  * added the amb tutorial.

  * added define-union-language

  * added define-extended-judgment-form

  * extended render-* functions so they can produce PDF

v5.2.1

  * rewrote the internals of the pattern matcher to be more consistent
    (centralized more error checking, moving more of it to compile
    time, and various other internal cleanups).

  * improved the way caching works so it uses about 1/5th memory and
    speeds up the R6RS test suite by about a factor of 2.

  * added a number of optimizations to the pattern matcher that
    speed up the R6RS test suite by 50% or so and speed up a
    lambdaJS benchmark by about a factor of 25.

  * added support for side-conditions and where clauses to
    define-relation, also added support for side-conditions to
    define-judgment-form

  * added the List-machine benchmark (by Appel, Dockins & Leroy)

v5.2

  * added define-judgment-form form

  * added define-term form

  * added with-compound-rewriters form

  * added Ariola-Felleisen by-need evaluation contexts to examples

  * improved error message for definition forms in expression contexts

v5.1.2

  * added support for typsetting define-relation relations

  * made apply-reduction-relation* call remove-duplicates
    on the result of apply-reduction-relation

  * extended render-reduction-relation-rules to accept rule indices
    in addition to rule names

  * added the to-lw/stx procedure

  * fixed domain checking for unioned reduction relations

  * added the #:cache-all? argument to apply-reduction-relation*
    and the current-cache-all? parameter

  * fixed stepper's handling of symbols that required || quoting

  * removed all undocumented exports

  * added the redex-let form

  * added the #:source argument to generate-term

  * changed redex-match to hide bindings for named ellipses such
    as ..._x

  * improve test-->E failure message
